--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -875,19 +875,21 @@ video {
 }
 
 .lws-productCard {
-  display: flex;
+  /* display: flex; */
   max-width: 350px;
   flex-direction: column;
   justify-content: space-between;
   overflow: hidden;
   border-radius: 0.375rem;
   border-width: 1px;
+  width: 100%;
+  height: 380px;
 }
 
 .lws-productImage {
   margin-left: auto;
   margin-right: auto;
-  height: 100%;
+  height: 200px;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
